[tool.poetry]
name = "tap-tiktok"
version = "0.1.0"
description = "`tap-tiktok` is a Singer tap for TikTok, built with the Meltano SDK for Singer Taps."
authors = ["Gary James"]
keywords = [
    "ELT",
    "TikTok",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
requests = "~=2.31"
singer-sdk = "~=0.34"

[tool.poetry.dev-dependencies]
pytest = "~=7.4"
tox = "~=4.12"
flake8 = "~=7.0"
black = "~=24.1"
pydocstyle = "~=6.3"
mypy = "~=1.8"
types-requests = "~=2.31"
isort = "~=5.13"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_tiktok"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-tiktok = 'tap_tiktok.tap:TapTikTok.cli'
